# alpha-gauntlet

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alphagauntlet/: __init__.py  evolution.py  factor_backtest.py  factor_eval.py  regime.py  scoring.py  wavelet_factors.py
alphagauntlet/wq101/: __init__.py  batch0_smoke.py  batch1.py  batch2.py  batch3.py  batch4.py  batch5.py  batch7.py  dsl.py  ic_eval.py  llm_round2_adopted.py  ops.py  ops_ext.py  panel_io.py  pit_check.py  reskin_screen.py  runner.py
docs/: factor_library.md  methodology.md
examples/: 01_evaluate_factors.py  02_backtest.py  03_gauntlet.py  _sample_data.py
scripts/: fetch_data.py  run_gauntlet_demo.py
tests/: test_evolution.py  test_smoke.py
